--- a/style.css
+++ b/style.css
@@ -80,7 +80,103 @@
     gap: 2rem;
   }
   
-  .categoria h3 {
+  .categoria1 h3 {
+    color: var(--dark-color);
+    border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .categoria1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 16px;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  .categoria1::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(imagenes/urbanabajada.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.4; 
+    z-index: -1;
+  }
+  
+  .categoria2 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 16px;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  .categoria2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(imagenes/montañabajada.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.4; 
+    z-index: -1;
+  }
+
+  .categoria3 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 16px;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  .categoria3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(imagenes/piezasbici.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.4; 
+    z-index: -1;
+  }
+
+  
+
+  .categoria2 h3 {
+    color: var(--dark-color);
+    border-bottom: 2px solid var(--primary-color);
+    padding-bottom: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .categoria3 h3 {
     color: var(--dark-color);
     border-bottom: 2px solid var(--primary-color);
     padding-bottom: 0.5rem;
@@ -103,6 +199,7 @@
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     transition: transform 0.3s, box-shadow 0.3s;
   }
+  
   
   .producto:hover {
     transform: translateY(-5px);
